# Sentiment

./: .gitignore  COMPLETE_DOCUMENTATION.md  README.md  app.py  cleanup_disk_space.py  colab_training_cell_aggressive.py  colab_training_cell_original_weighted.py  colab_training_deberta.py  colab_training_distilbert.py  colab_training_electra.py  colab_training_finbert.py  download_financialphrasebank.py  main.py  pretrained_comparison.csv  pretrained_models_analysis.txt  pyproject.toml  requirements.txt  sota_comparison.csv  test_pretrained_models.py  test_sota_models.py  test_trained_models.py  trained_models_analysis.txt  trained_models_comparison.csv
data/datasets/: financialphrasebank.csv
data/processed/20260421/: tsmc_20260421.csv  tsmc_20260421_labeled.csv
data/processed/20260422/: aapl_20260422.csv  bird_20260422.csv  bird_20260422_labeled.csv
src/aggregation/: report_builder.py  scoring.py  summarizer.py
src/cli/: aggregate.py  build_dataset.py  main.py  train_model.py
src/data/loaders/: news_api_loader.py
src/input/: schemas.py
src/labeling/: lexicon.py  weak_label.py
src/processing/: clean.py  language.py
src/services/: news_api_client.py
tests/: test_aggregation.py  test_clean.py  test_lexicon.py  test_metrics.py
